--- a/README.rdoc
+++ b/README.rdoc
@@ -1,9 +1,11 @@
 = acts_as_cleo
 
-Description goes here.
+Acts As Cleo is a Rails gem that allows for easy integration with Linked In's Open Source type ahead manager. 
+
+Verify that you have downloaded and installed cleo locally.
 
 == Contributing to acts_as_cleo
- 
+
 * Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet.
 * Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it.
 * Fork the project.
@@ -12,8 +14,11 @@ Description goes here.
 * Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
 * Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
 
+== To test
+* rake start:cleo
+* rake
+
 == Copyright
 
 Copyright (c) 2012 Robert R. Meyer. See LICENSE.txt for
 further details.
-
