Changes for readme updated

--- a/README.rdoc
+++ b/README.rdoc
@@ -5,9 +5,16 @@
 
 This gem is still in beta. The main Cleo functionality works but the hooks into active record objects are not done yet.
 
+* Cleo.find
+* Cleo.update
+* Cleo.delete
+* Cleo.create
+
+As of this moment you need to pass a constructed Cleo::Result object to the above methods for them to function correctly.
+
 Feel free to use this gem and provide feedback / patch requests.
 
-Acts As Cleo is a Rails gem that allows for easy integration with Linked In's Open Source type ahead manager. 
+Acts As Cleo is a Rails gem that allows for easy integration with Linked In's Open Source type ahead manager.
 
 Verify that you have downloaded and installed cleo locally.
 
@@ -22,7 +29,7 @@ Verify that you have downloaded and installed cleo locally.
 * Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
 
 == To test
-* verify that cleo is running locally. 
+* verify that cleo is running locally.
 * rake
 
 == Copyright
